[metadata]
name = micrograd-pp
version = 0.1
author = Parsiad Azimzadeh
author_email = parsiad.azimzadeh@gmail.com
description = A minimalistic wrapper around NumPy which adds support for automatic differentiation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/parsiad/micrograd-pp
project_urls =
    Bug Tracker = https://github.com/parsiad/micrograd-pp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    numpy
package_dir =
    = src
packages = find:
python_requires = >= 3.6

[options.extras_require]
gpu =
    cupy

[options.packages.find]
where = src

[pylint.FORMAT]
max-line-length=120
